--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-header *ngIf="false"></app-header>
-<app-observable *ngIf="true"></app-observable>
+<app-observable *ngIf="false"></app-observable>
+<app-time *ngIf="true"></app-time>
 <app-layout *ngIf="false"></app-layout>
