--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,4 +1,6 @@
 <!-- TEMPLATE -->
+<br />
+<p><b>Grid layout #1</b></p>
 <div class="container">
   <div class="row">
     <div class="col">
@@ -18,8 +20,8 @@
   </div>
 </div>
 
-<hr />
-
+<br />
+<p><b>Grid layout #2</b></p>
 <div class="container px-lg-5">
   <div class="row justify-content-md-center">
     <div class="col-lg-2">1 of 3</div>
@@ -34,7 +36,7 @@
 </div>
 
 <br />
-
+<p><b>Grid layout #3</b></p>
 <div class="container px-lg-5">
   <div class="row mx-lg-n5">
     <div class="col py-3 px-lg-5 border bg-light">Custom column padding</div>
@@ -43,7 +45,7 @@
 </div>
 
 <br />
-
+<p><b>Grid layout #4 (container-fluid)</b></p>
 <div class="container-fluid px-lg-5">
   <div class="row mx-lg-n5">
     <div class="col py-3 px-lg-5 border bg-light">Custom column padding</div>
@@ -52,7 +54,7 @@
 </div>
 
 <br />
-
+<p><b>Grid layout #5 (dispaly-flex)</b></p>
 <div class="container">
   <div class="row">
     <div class="col">
@@ -76,9 +78,9 @@
   </div>
 </div>
 
-<br />
-
 <!-- FORMULARZ -->
+<br />
+<p><b>Grid layout #6 (form)</b></p>
 <div class="container">
   <div class="row">
     <div class="col">
@@ -98,6 +100,24 @@
           </button>
         </div>
       </form>
+    </div>
+  </div>
+</div>
+
+<br />
+<p><b>Css display</b></p>
+
+<div style="">
+  <div class="r">
+    <div class="c" style="display: inline-block">
+      <div class="i">Item 1</div>
+      <div class="i">Item 2</div>
+      <div class="i">Item 3</div>
+    </div>
+    <div class="c">
+      <div class="i">Item 1</div>
+      <div class="i">Item 2</div>
+      <div class="i">Item 3</div>
     </div>
   </div>
 </div>
