--- a/src/app/layout/layout.component.css
+++ b/src/app/layout/layout.component.css
@@ -8,7 +8,8 @@
 
 /* Kolumna */
 .row > .col,
-.row > [class^='col-'] {
+.row > [class^='col-'],
+.r {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
   background-color: rgba(86, 61, 124, 0.15);
@@ -16,13 +17,15 @@
 }
 
 /* Layout w kolumnie */
-.row > .col > div {
+.row > .col > div,
+.c {
   background-color: rgba(86, 61, 124, 0.15);
   border: 1px solid rgba(86, 61, 124, 0.15);
 }
 
 /* Element w layoucie */
-.row > .col > div > div {
+.row > .col > div > div,
+.i {
   background-color: rgba(86, 61, 124, 0.15);
   border: 1px solid rgba(86, 61, 124, 0.15);
 }
