--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-header *ngIf="false"></app-header>
 
 <app-observable *ngIf="false"></app-observable>
-<app-time *ngIf="true"></app-time>
-<app-utils *ngIf="true"></app-utils>
+<app-time *ngIf="false"></app-time>
+<app-utils *ngIf="false"></app-utils>
 
 <app-layout *ngIf="false"></app-layout>
