--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,4 @@
 <app-time *ngIf="false"></app-time>
 <app-utils *ngIf="false"></app-utils>
 
-<app-layout *ngIf="false"></app-layout>
+<app-layout *ngIf="true"></app-layout>
