--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -62,8 +62,8 @@
         class="d-flex flex-wrap-reverse justify-content-end align-items-center"
       >
         <div class="p-1">Item 1</div>
-        <div class="p-1">Item 1</div>
-        <div class="p-1">Item 1</div>
+        <div class="p-1">Item 2</div>
+        <div class="p-1">Item 3</div>
       </div>
     </div>
     <div class="col">
@@ -71,8 +71,8 @@
         class="d-flex flex-wrap-reverse justify-content-end align-items-center"
       >
         <div class="p-1">Item 1</div>
-        <div class="p-1">Item 1</div>
-        <div class="p-1">Item 1</div>
+        <div class="p-1">Item 2</div>
+        <div class="p-1">Item 3</div>
       </div>
     </div>
   </div>
@@ -118,6 +118,32 @@
       <div class="i">Item 1</div>
       <div class="i">Item 2</div>
       <div class="i">Item 3</div>
+    </div>
+  </div>
+</div>
+
+<br />
+<p><b>Grid layout #7</b></p>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <div class="" style="display: inline-block">
+        <div class="p-1">Item 1</div>
+        <div class="p-1">Item 2</div>
+        <div class="p-1">Item 3</div>
+      </div>
+      <div class="" style="display: inline-block">
+        <div class="p-1">Item 1</div>
+        <div class="p-1">Item 2</div>
+        <div class="p-1">Item 3</div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="">
+        <div class="p-1 w">Item 1</div>
+        <div class="p-1">Item 2</div>
+        <div class="p-1">Item 3</div>
+      </div>
     </div>
   </div>
 </div>
