--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
-<app-header *ngIf="false"></app-header>
+<div class="container">
+  <app-header *ngIf="false"></app-header>
 
-<app-observable *ngIf="false"></app-observable>
-<app-time *ngIf="false"></app-time>
-<app-utils *ngIf="false"></app-utils>
+  <app-observable *ngIf="false"></app-observable>
+  <app-time *ngIf="false"></app-time>
+  <app-utils *ngIf="false"></app-utils>
 
-<app-layout *ngIf="true"></app-layout>
+  <app-layout *ngIf="true"></app-layout>
+</div>
