--- a/src/app/components/layout/layout.component.css
+++ b/src/app/components/layout/layout.component.css
@@ -7,25 +7,31 @@
 */
 
 /* Kolumna */
-.row > .col,
+/* .row > .col,
 .row > [class^='col-'],
 .r {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
   background-color: rgba(86, 61, 124, 0.15);
   border: 1px solid rgba(86, 61, 124, 0.2);
-}
+} */
 
 /* Layout w kolumnie */
-.row > .col > div,
+/* .row > .col > div,
 .c {
   background-color: rgba(86, 61, 124, 0.15);
   border: 1px solid rgba(86, 61, 124, 0.15);
-}
+} */
 
 /* Element w layoucie */
-.row > .col > div > div,
+/* .row > .col > div > div,
 .i {
+  background-color: rgba(86, 61, 124, 0.15);
+  border: 1px solid rgba(86, 61, 124, 0.15);
+} */
+
+/* Element w layoucie */
+div {
   background-color: rgba(86, 61, 124, 0.15);
   border: 1px solid rgba(86, 61, 124, 0.15);
 }
