--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -1,5 +1,6 @@
 <!-- TEMPLATE -->
-<br />
+
+<h2>Grid layout</h2>
 <p><b>Grid layout #1</b></p>
 <div class="container">
   <div class="row">
@@ -117,7 +118,7 @@
     <div class="c">
       <div class="i">Item 1</div>
       <div class="i">Item 2</div>
-      <div class="i">Item 3</div>
+      <div class="i d-inline-flex">Item 3</div>
     </div>
   </div>
 </div>
@@ -139,11 +140,85 @@
       </div>
     </div>
     <div class="col">
-      <div class="">
-        <div class="p-1 w">Item 1</div>
-        <div class="p-1">Item 2</div>
-        <div class="p-1">Item 3</div>
+      <div class="d-inline-flex">
+        <div class="i">Item 1</div>
+        <div class="i">Item 2</div>
+        <div class="i">Item 3</div>
       </div>
     </div>
   </div>
 </div>
+
+<br />
+<h2>Kontener flex</h2>
+<p><b>flex-row</b></p>
+<div class="d-flex flex-row">
+  <div class="p-1">Item 1</div>
+  <div class="p-1">Item 2</div>
+  <div class="p-1">Item 3</div>
+</div>
+<div class="d-flex flex-row-reverse">
+  <div class="p-1">Item 1</div>
+  <div class="p-1">Item 2</div>
+  <div class="p-1">Item 3</div>
+</div>
+
+<div class="d-flex justify-content-center">
+  <div class="p-1">Item 1</div>
+  <div class="p-1">Item 2</div>
+  <div class="p-1">Item 3</div>
+</div>
+
+<div class="d-flex justify-content-between">
+  <div class="p-1">Item 1</div>
+  <div class="p-1">Item 2</div>
+  <div class="p-1">Item 3</div>
+</div>
+
+<div class="d-flex justify-content-evenly">
+  <div class="p-1">Item 1</div>
+  <div class="p-1">Item 2</div>
+  <div class="p-1">Item 3</div>
+</div>
+
+<br />
+<p><b>flex-column</b></p>
+<div class="d-flex flex-column">
+  <div class="p-1">Item 1</div>
+  <div class="p-1">Item 2</div>
+  <div class="p-1">Item 3</div>
+</div>
+<br />
+<div class="d-flex flex-column-reverse">
+  <div class="p-1">Item 1</div>
+  <div class="p-1">Item 2</div>
+  <div class="p-1">Item 3</div>
+</div>
+<br />
+<br />
+<div class="d-flex align-items-start">
+  <div class="p-1">Item 1</div>
+  <div class="p-1">Item 2</div>
+  <div class="p-1">Item 3</div>
+</div>
+<br />
+<div class="d-flex flex-column align-items-center">
+  <div class="p-1">Item 1</div>
+  <div class="p-1">Item 2</div>
+  <div class="p-1">Item 3</div>
+</div>
+<div class="d-flex p-2 bd-highlight">I'm a flexbox container!</div>
+
+<br />
+<p><b>Kontener inline-flex </b></p>
+<div class="d-inline-flex">
+  <div class="p-1">Item 1</div>
+  <div class="p-1">Item 2</div>
+  <div class="p-1">Item 3</div>
+</div>
+<br />
+<div class="d-inline-flex p-2 bd-highlight">
+  I'm an inline flexbox container!
+</div>
+
+<br /><br /><br />
