--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,5 +5,5 @@
   <app-time *ngIf="false"></app-time>
   <app-utils *ngIf="false"></app-utils>
 
-  <app-layout *ngIf="true"></app-layout>
+  <app-layout-bootstrap *ngIf="true"></app-layout-bootstrap>
 </div>
