--- a/src/app/components/layout/bootstrap/layout-bootstrap.component.html
+++ b/src/app/components/layout/bootstrap/layout-bootstrap.component.html
@@ -1,6 +1,6 @@
 <!-- TEMPLATE -->
 
-<h2>Grid layout</h2>
+<h2>Grid layout X</h2>
 <p><b>Grid layout #1</b></p>
 <div class="container">
   <div class="row">
