2 files modified, 3 added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,5 +5,6 @@
   <app-time *ngIf="false"></app-time>
   <app-utils *ngIf="false"></app-utils>
 
-  <app-layout-bootstrap *ngIf="true"></app-layout-bootstrap>
+  <app-layout-bootstrap *ngIf="false"></app-layout-bootstrap>
+  <app-layout-css *ngIf="true"></app-layout-css>
 </div>
