4 files modified, 2 added, 2 deleted

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
   <app-header *ngIf="false"></app-header>
 
   <app-observable *ngIf="false"></app-observable>
